# cot-injection-monitoring

./: CLAUDE.md  COLAB_CELLS.md  COLAB_RUNBOOK.md  PREFILL_RESUME.md  README.md  RESULTS_LOG.md  cot-injection-monitoring_PLAN.md  init_plan.md  pyproject.toml
config/: cost.yaml  experiment.yaml  models.yaml
src/attacks/: generate.py
src/data/: load_mmlu.py
src/infra/: cost.py  llm_client.py  matrix.py
src/models/: run_model.py
src/pipeline/: aggregate.py  run_experiment.py
tests/: test_experiment.py
